[gd_scene load_steps=18 format=2]

[ext_resource path="res://Script/angel.gd" type="Script" id=1]
[ext_resource path="res://Sprite/mobs/angel/spritesheet/angel.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 122, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 244, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 366, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 488, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 610, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 732, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 854, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 976, 0, 122, 117 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 117, 122, 117 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 122, 117, 122, 117 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=13]
radius = 48.0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_angel:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=15]
resource_name = "activated"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite_angel:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite_angel:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite_angel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite_angel:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, -10 ), Vector2( 0, -15 ), Vector2( 0, -21 ), Vector2( 0, -30 ), Vector2( 0, -22 ), Vector2( 0, -15 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("anim_angel:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}

[node name="angel" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite_angel" type="AnimatedSprite" parent="."]
z_index = -2
frames = SubResource( 12 )
frame = 1

[node name="area_angel" type="Area2D" parent="."]
collision_layer = 0

[node name="coll_angel" type="CollisionShape2D" parent="area_angel"]
shape = SubResource( 13 )

[node name="anim_angel" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 14 )
anims/activated = SubResource( 15 )

[connection signal="body_entered" from="area_angel" to="." method="_on_area_angel_body_entered"]
[connection signal="body_exited" from="area_angel" to="." method="_on_area_angel_body_exited"]
